--- a/Regular Expression (Regex) In NLP.ipynb
+++ b/Regular Expression (Regex) In NLP.ipynb
@@ -85,7 +85,170 @@
    "metadata": {},
    "source": [
     "# Metacharacters and Escaping In Regex.\n",
-    "\n"
+    "\n",
+    "Metacharacters and escaping are essential concepts in regular expressions (regex) that help define patterns for searching and manipulating text. Metacharacters are special characters in regex that have predefined meanings, and escaping allows you to use these metacharacters as literal characters in your pattern. Here's a more detailed explanation of both concepts:\n",
+    "\n",
+    "1. Metacharacters:\n",
+    "   Metacharacters are characters in regex that have special meanings and are used to specify certain types of matches or operations. They are not matched as literal characters but rather control the behavior of the regular expression engine. Some common metacharacters include:\n",
+    "\n",
+    "   - `.` (Dot): Matches any character except a newline.\n",
+    "   - `*` (Asterisk): Matches zero or more occurrences of the preceding element.\n",
+    "   - `+` (Plus): Matches one or more occurrences of the preceding element.\n",
+    "   - `?` (Question Mark): Matches zero or one occurrence of the preceding element.\n",
+    "   - `|` (Pipe): Acts as an OR operator, allowing you to specify alternatives.\n",
+    "   - `^` (Caret): Matches the start of a line or string.\n",
+    "   - `$` (Dollar): Matches the end of a line or string.\n",
+    "   - `[ ]` (Square Brackets): Defines a character class for matching a single character from a set of characters.\n",
+    "   - `{ }` (Curly Braces): Specifies the exact number of occurrences or a range of occurrences of the preceding element.\n",
+    "   - `()` (Parentheses): Groups elements together and captures matched text.\n",
+    "\n",
+    "2. Escaping:\n",
+    "   Escaping is the process of preceding a metacharacter with a backslash `\\` to indicate that you want to match that metacharacter as a literal character rather than as a special character with its regular meaning. For example, if you want to search for a literal dot (.) in a text, you need to escape it as `\\.`.\n",
+    "\n",
+    "   Common metacharacters that often need escaping include:\n",
+    "   - `.`\n",
+    "   - `*`\n",
+    "   - `+`\n",
+    "   - `?`\n",
+    "   - `|`\n",
+    "   - `^`\n",
+    "   - `$`\n",
+    "   - `[`\n",
+    "   - `]`\n",
+    "   - `{`\n",
+    "   - `}`\n",
+    "   - `(` \n",
+    "   - `)`\n",
+    "   - `\\` (Backslash)\n",
+    "\n",
+    "   Here's an example of using escaping in regex:\n",
+    "\n",
+    "   - `\\.`: Matches a literal dot.\n",
+    "   - `\\*`: Matches a literal asterisk.\n",
+    "   - `\\(`: Matches a literal opening parenthesis.\n",
+    "   - `\\)` : Matches a literal closing parenthesis.\n",
+    "\n",
+    "Escaping is useful when you want to search for specific characters that are metacharacters in regex. It allows you to make your regex pattern more precise and avoid any unintended special behaviors.\n",
+    "\n",
+    "In summary, metacharacters have predefined meanings in regex, while escaping allows you to treat them as literal characters when needed. Understanding both concepts is crucial for effectively using regular expressions for pattern matching and text manipulation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classes and Rangex\n",
+    "\n",
+    "Character classes and ranges in regular expressions (regex) are tools used to specify sets of characters you want to match. They allow you to create patterns that match characters within a defined group or range, making your regex patterns more concise and expressive. Here's an explanation of character classes and ranges in regex:\n",
+    "\n",
+    "1. Character Classes:\n",
+    "   A character class is a way to specify a set of characters that you want to match at a particular position in the text. Character classes are enclosed in square brackets `[ ]`, and any character inside the brackets will be considered a valid match. For example:\n",
+    "   \n",
+    "   - `[aeiou]` matches any vowel (a, e, i, o, or u).\n",
+    "   - `[0-9]` matches any digit from 0 to 9.\n",
+    "   - `[A-Za-z]` matches any uppercase or lowercase letter.\n",
+    "   - `[abc123]` matches either 'a', 'b', 'c', '1', '2', or '3'.\n",
+    "\n",
+    "   You can also use a caret `^` as the first character inside the brackets to negate the character class. For example, `[^aeiou]` matches any character that is not a vowel.\n",
+    "\n",
+    "2. Ranges:\n",
+    "   Ranges in regex allow you to specify a continuous range of characters in a character class. Ranges are indicated using a hyphen `-` between two characters inside the brackets. For example:\n",
+    "   \n",
+    "   - `[0-9]` matches any digit from 0 to 9.\n",
+    "   - `[A-Z]` matches any uppercase letter from 'A' to 'Z'.\n",
+    "   - `[a-z]` matches any lowercase letter from 'a' to 'z'.\n",
+    "   - `[A-Za-z0-9]` matches any alphanumeric character (letters and digits).\n",
+    "\n",
+    "   Ranges are a convenient way to simplify character class definitions when dealing with sequential or consecutive characters.\n",
+    "\n",
+    "Here are some more examples to illustrate character classes and ranges:\n",
+    "\n",
+    "- `[^0-9]` matches any character that is not a digit.\n",
+    "- `[A-Fa-f0-9]` matches any character that is a hexadecimal digit (0-9 and A-F or a-f).\n",
+    "- `[a-zA-Z_]` matches any letter (uppercase or lowercase) or underscore '_'.\n",
+    "\n",
+    "Character classes and ranges can make your regex patterns more concise and readable when you need to match specific groups of characters. They are an essential part of regular expressions and are frequently used to describe patterns in text matching and manipulation tasks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Quantifiers and Repetition\n",
+    " \n",
+    "\n",
+    "**Quantifiers** in NLP are words and phrases that indicate the quantity of something. They can be used to describe the number of times something happens, the amount of something that exists, or the proportion of something that is true.\n",
+    "\n",
+    "Some examples of quantifiers in English include:\n",
+    "\n",
+    "* **Count quantifiers:** one, two, three, four, five, six, seven, eight, nine, ten, eleven, twelve, etc.\n",
+    "* **Mass quantifiers:** some, any, much, little, all, most, none, etc.\n",
+    "* **Proportional quantifiers:** many, few, half, most, all, some, none, etc.\n",
+    "\n",
+    "Quantifiers are important in NLP because they can help to identify the meaning and intent of text. For example, the sentence \"I have a few cats\" conveys a different meaning than the sentence \"I have many cats.\" The first sentence suggests that the speaker has a small number of cats, while the second sentence suggests that the speaker has a large number of cats.\n",
+    "\n",
+    "Quantifiers can also be used to identify the parts of speech in a sentence. For example, the word \"few\" in the sentence \"I have a few cats\" is an adjective, while the word \"three\" in the sentence \"I have three cats\" is a numeral.\n",
+    "\n",
+    "**Repetition** in NLP is the occurrence of a word or phrase more than once in a text. Repetition can be used to emphasize a point, to create a rhythm or flow, or to signal a change in topic.\n",
+    "\n",
+    "Repetition can also be used to identify the structure of a sentence. For example, in the sentence \"I love cats. I love dogs,\" the repetition of the word \"I\" indicates that the sentence is two separate sentences.\n",
+    "\n",
+    "Repetition can also be used to identify the meaning of a word or phrase. For example, in the sentence \"She is very, very beautiful,\" the repetition of the word \"very\" emphasizes the speaker's belief that the woman is beautiful.\n",
+    "\n",
+    "Quantifiers and repetition are both important features of language. They can be used to convey meaning, to signal structure, and to create emphasis. NLP models need to be able to understand and process quantifiers and repetition in order to be able to accurately understand and generate text.\n",
+    "\n",
+    "Here are some examples of how quantifiers and repetition are used in NLP:\n",
+    "\n",
+    "* **Machine translation:** Quantifiers and repetition can be used to improve the accuracy of machine translation systems. For example, if a machine translation system is translating the sentence \"I have a few cats\" from English to Spanish, the system can use the quantifier \"few\" to identify the correct Spanish translation for the word \"cats.\"\n",
+    "* **Text summarization:** Quantifiers and repetition can be used to identify the most important information in a text and to generate a summary of that information. For example, if a text summarization system is summarizing a news article about a new product launch, the system can use quantifiers and repetition to identify the key features of the product and to generate a summary that highlights those features.\n",
+    "* **Question answering:** Quantifiers and repetition can be used to improve the accuracy of question answering systems. For example, if a question answering system is asked the question \"How many cats do you have?\" the system can use the quantifier \"many\" to identify the correct answer.\n",
+    "\n",
+    "Overall, quantifiers and repetition are important features of language and NLP models need to be able to understand and process them in order to be able to accurately understand and generate text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Advanced Regex.\n",
+    "\n",
+    "Advanced regex techniques go beyond the basics of regular expressions to handle more complex and sophisticated pattern matching and text manipulation tasks. These techniques require a deeper understanding of regex and may involve more complex patterns, lookarounds, and other advanced features. Here are some advanced regex techniques:\n",
+    "\n",
+    "1. Lookaheads and Lookbehinds:\n",
+    "   Lookaheads and lookbehinds are zero-width assertions that allow you to check for patterns that are either ahead or behind the current position in the text, without consuming characters. These are useful for making sure that certain conditions are met before or after a match. Common lookaheads include positive lookahead `(?=...)`, negative lookahead `(?!...)`, positive lookbehind `(?<=...)`, and negative lookbehind `(?<!...)`.\n",
+    "\n",
+    "2. Capturing and Non-Capturing Groups:\n",
+    "   Regular expressions use parentheses to create capturing groups. In some cases, you may want to group expressions for logical purposes without capturing the matched text. You can create non-capturing groups using `(?:...)`. This can make your regex more efficient and cleaner when you don't need to access captured groups.\n",
+    "\n",
+    "3. Backreferences:\n",
+    "   Backreferences allow you to refer to previously captured groups in your regex pattern. This can be useful for matching repeated content, such as duplicated words or tags. To use a backreference, you reference a captured group with a backslash followed by the group number, like `\\1` for the first capturing group.\n",
+    "\n",
+    "4. Conditional Patterns:\n",
+    "   Conditional patterns in regex allow you to define different matching conditions based on the presence or absence of specific substrings. This is often used to handle optional content or variations in text patterns.\n",
+    "\n",
+    "5. Recursive Patterns:\n",
+    "   Recursive patterns are used to match nested structures, like nested parentheses or HTML/XML tags. They are essential when working with hierarchical data formats.\n",
+    "\n",
+    "6. Greedy and Lazy Quantifiers:\n",
+    "   Greedy quantifiers, like `*` and `+`, match as much text as possible. Lazy quantifiers, denoted by `*?` and `+?`, match as little text as possible. Using these correctly is important to avoid overmatching or undermatching in your regex patterns.\n",
+    "\n",
+    "7. Anchors and Word Boundaries:\n",
+    "   Anchors such as `^` (start of line) and `$` (end of line) help ensure that your pattern matches only at specific positions in the text. Word boundaries `\\b` or `\\B` are used to match whole words or non-words, respectively.\n",
+    "\n",
+    "8. Unicode and Character Properties:\n",
+    "   Modern regex engines support Unicode properties, allowing you to match characters based on their Unicode properties like scripts, categories, and more. This is useful for working with multilingual text and complex character sets.\n",
+    "\n",
+    "9. Recursion and Subroutine Calls:\n",
+    "   Some regex engines support recursive patterns and subroutine calls, enabling you to write more complex patterns with nested structures and repeated subpatterns.\n",
+    "\n",
+    "Advanced regex techniques are valuable when dealing with intricate text processing tasks, but they also require a solid understanding of regex fundamentals and careful testing to ensure that the patterns work as expected. Mastery of these techniques can greatly enhance your ability to solve complex text manipulation problems using regular expressions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Thank You!**"
    ]
   }
  ],
