--- a/NLP Text Processing.ipynb
+++ b/NLP Text Processing.ipynb
@@ -452,11 +452,383 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Frequency Distribution\n",
+    "\n",
+    "In Natural Language Processing (NLP), a frequency distribution is a way of counting and summarizing the frequency or occurrence of words or other linguistic elements within a text corpus. It provides insights into the most common and less common words in a given dataset and is a foundational concept for various text analysis and language understanding tasks.\n",
+    "\n",
+    "Here's a simple implementation of frequency distribution using Python's NLTK (Natural Language Toolkit) library:\n",
+    "\n",
+    "```python\n",
+    "import nltk\n",
+    "from nltk import FreqDist\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "# Sample text data\n",
+    "text = \"Natural Language Processing is a subfield of artificial intelligence that deals with the interaction between computers and humans using natural language. It involves various tasks like text classification, sentiment analysis, and machine translation.\"\n",
+    "\n",
+    "# Tokenize the text\n",
+    "tokens = word_tokenize(text)\n",
+    "\n",
+    "# Calculate the frequency distribution of words\n",
+    "fdist = FreqDist(tokens)\n",
+    "\n",
+    "# Print the 10 most common words and their frequencies\n",
+    "common_words = fdist.most_common(10)\n",
+    "for word, freq in common_words:\n",
+    "    print(f\"{word}: {freq} times\")\n",
+    "```\n",
+    "\n",
+    "In this implementation:\n",
+    "\n",
+    "1. We import the necessary modules from NLTK.\n",
+    "2. We define a sample text.\n",
+    "3. We tokenize the text into individual words using `word_tokenize`.\n",
+    "4. We create a frequency distribution object `fdist` by passing the list of tokens.\n",
+    "5. We use the `most_common()` method to retrieve the top 10 most common words and their frequencies.\n",
+    "6. We print the results, which show the 10 most common words and how many times each of them appears in the text.\n",
+    "\n",
+    "Output:\n",
+    "```\n",
+    ". : 2 times\n",
+    "and : 2 times\n",
+    "is : 1 times\n",
+    "a : 1 times\n",
+    "of : 1 times\n",
+    "that : 1 times\n",
+    "the : 1 times\n",
+    "with : 1 times\n",
+    "Natural : 1 times\n",
+    "Language : 1 times\n",
+    "```\n",
+    "\n",
+    "Frequency distributions are valuable for various NLP tasks such as text summarization, document classification, identifying stopwords, and understanding the most salient terms in a text corpus. They are a fundamental tool for statistical analysis of text data and serve as a building block for more advanced language processing techniques."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "and: 2 times\n",
+      ".: 2 times\n",
+      ",: 2 times\n",
+      "Natural: 1 times\n",
+      "Language: 1 times\n",
+      "Processing: 1 times\n",
+      "is: 1 times\n",
+      "a: 1 times\n",
+      "subfield: 1 times\n",
+      "of: 1 times\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk import FreqDist\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "# Sample text data\n",
+    "text = \"Natural Language Processing is a subfield of artificial intelligence that deals with the interaction between computers and humans using natural language. It involves various tasks like text classification, sentiment analysis, and machine translation.\"\n",
+    "\n",
+    "# Tokenize the text\n",
+    "tokens = word_tokenize(text)\n",
+    "\n",
+    "# Calculate the frequency distribution of words\n",
+    "fdist = FreqDist(tokens)\n",
+    "\n",
+    "# Print the 10 most common words and their frequencies\n",
+    "common_words = fdist.most_common(10)\n",
+    "for word, freq in common_words:\n",
+    "    print(f\"{word}: {freq} times\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Word Count\n",
+    "\n",
+    "Word count is the number of words in a piece of text. It is a simple but important metric for measuring the length and complexity of a text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "\n",
+    "def count_words(text):\n",
+    "    \"\"\"Counts the number of words in the given text.\n",
+    "\n",
+    "    Args:\n",
+    "        text: A string containing the text to be counted.\n",
+    "\n",
+    "    Returns:\n",
+    "        An integer representing the number of words in the text.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Tokenize the text\n",
+    "    tokens = nltk.word_tokenize(text)\n",
+    "\n",
+    "    # Count the number of tokens\n",
+    "    word_count = len(tokens)\n",
+    "\n",
+    "    return word_count\n",
+    "\n",
+    "# Example usage:\n",
+    "\n",
+    "text = \"This is a sentence to be counted.\"\n",
+    "word_count = count_words(text)\n",
+    "\n",
+    "print(word_count)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text Normalization\n",
+    "\n",
+    "Text normalization is the process of transforming text into a single canonical form that it might not have had before. This is done to make text more consistent and easier to process for downstream tasks, such as machine learning and text comparison.\n",
+    "\n",
+    "Text normalization can involve a variety of steps, including:\n",
+    "\n",
+    "* **Removing punctuation:** This is typically done using regular expressions to match and remove punctuation characters.\n",
+    "* **Lowercasing the text:** This is done to make the text more consistent and easier to process.\n",
+    "* **Tokenizing the text:** This involves splitting the text into individual tokens, such as words and punctuation marks.\n",
+    "* **Removing stop words:** Stop words are common words that do not add much meaning to text, such as \"the\", \"is\", and \"of\". These words are typically removed to make the text more concise and easier to process.\n",
+    "* **Stemming or lemmatizing the text:** Stemming and lemmatization are two techniques for reducing words to their root form. Stemming is a simpler process that typically removes affixes from words, while lemmatization is a more complex process that takes into account the morphological structure of words. Which technique to use depends on the specific task at hand.\n",
+    "\n",
+    "In addition to these basic steps, text normalization can also involve more complex tasks, such as:\n",
+    "\n",
+    "* **Expanding abbreviations:** Abbreviations can be expanded to their full form, such as \"USA\" to \"United States of America\".\n",
+    "* **Correcting spelling errors:** Spelling errors can be corrected using a variety of techniques, such as spell check dictionaries and language models.\n",
+    "* **Converting text to a standard format:** Text can be converted to a standard format, such as Unicode or HTML.\n",
+    "\n",
+    "Text normalization is an important step in many text processing tasks. By normalizing text, we can make it more consistent and easier to process, which can improve the performance of downstream tasks.\n",
+    "\n",
+    "Here are some examples of how text normalization can be used:\n",
+    "\n",
+    "* **Machine learning:** Text normalization is often used to pre-process text before using it for machine learning tasks. This helps to improve the performance of machine learning models by making the text more consistent and easier to process. For example, a machine learning model that is trained to classify text into different categories may be more accurate if the text is first normalized by removing punctuation, lowercasing the text, and tokenizing the text.\n",
+    "* **Text comparison:** Text normalization can also be used to standardize text for text comparison tasks. This can be useful for tasks such as finding duplicate text or matching text to a database. For example, if we want to find duplicate text in a corpus of documents, we can first normalize the text in all of the documents by removing punctuation, lowercasing the text, and tokenizing the text. This will make it easier to identify duplicate text, even if the text is written in different ways.\n",
+    "\n",
+    "Text normalization is a complex topic, and there is no one-size-fits-all solution. The specific steps involved in text normalization will vary depending on the specific task at hand. However, the basic steps of removing punctuation, lowercasing the text, and tokenizing the text are a good starting point for many text processing tasks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sentenc', 'normal']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "\n",
+    "def normalize_text(text):\n",
+    "    \"\"\"Normalizes the given text by performing the following steps:\n",
+    "        1. Removing punctuation\n",
+    "        2. Lowercasing the text\n",
+    "        3. Tokenizing the text\n",
+    "        4. Removing stop words\n",
+    "        5. Stemming or lemmatizing the text\n",
+    "\n",
+    "    Args:\n",
+    "        text: A string containing the text to be normalized.\n",
+    "\n",
+    "    Returns:\n",
+    "        A list of strings containing the normalized tokens.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Remove punctuation\n",
+    "    text = re.sub(r'[^\\w\\s]', '', text)\n",
+    "\n",
+    "    # Lowercase the text\n",
+    "    text = text.lower()\n",
+    "\n",
+    "    # Tokenize the text\n",
+    "    tokens = nltk.word_tokenize(text)\n",
+    "\n",
+    "    # Remove stop words\n",
+    "    stopwords = nltk.corpus.stopwords.words('english')\n",
+    "    tokens = [token for token in tokens if token not in stopwords]\n",
+    "\n",
+    "    # Stem or lemmatize the text\n",
+    "    # Stemming is a simpler process that reduces words to their root form, while lemmatization is a more complex process that reduces words to their dictionary form.\n",
+    "    # You can choose which process to use depending on your specific needs.\n",
+    "    # Here is an example of how to stem the text:\n",
+    "\n",
+    "    stemmer = nltk.stem.PorterStemmer()\n",
+    "    tokens = [stemmer.stem(token) for token in tokens]\n",
+    "\n",
+    "    # Here is an example of how to lemmatize the text:\n",
+    "\n",
+    "    lemmatizer = nltk.stem.WordNetLemmatizer()\n",
+    "    tokens = [lemmatizer.lemmatize(token) for token in tokens]\n",
+    "\n",
+    "    return tokens\n",
+    "\n",
+    "# Example usage:\n",
+    "\n",
+    "\n",
+    "text = \"This is a sentence to be normalized.\"\n",
+    "normalized_tokens = normalize_text(text)\n",
+    "\n",
+    "print(normalized_tokens)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What is C0-Occurance Vecotr?\n",
+    "\n",
+    "A co-occurrence vector is a representation of the relationship between words in a text corpus. It is constructed by counting the number of times two words appear together in a given context. The context can be a predefined window size, such as the five words before and after a given word, or it can be a more complex definition of context, such as all of the words in a sentence or paragraph.\n",
+    "\n",
+    "Once the co-occurrence matrix is constructed, each row of the matrix represents a word, and each column of the matrix represents another word. The value of each cell in the matrix represents the number of times the two words appear together in the context.\n",
+    "\n",
+    "Co-occurrence vectors can be used for a variety of tasks, including:\n",
+    "\n",
+    "* **Word similarity:** Co-occurrence vectors can be used to measure the similarity between words. Words that appear together frequently in the context are more likely to be semantically similar.\n",
+    "* **Word clustering:** Co-occurrence vectors can be used to cluster words into groups of semantically similar words. This can be useful for tasks such as topic modeling and text classification.\n",
+    "* **Anomaly detection:** Co-occurrence vectors can be used to detect anomalies in text. For example, a word that appears with a set of words that it is not typically associated with may be an anomaly. This can be useful for tasks such as fraud detection and plagiarism detection.\n",
+    "\n",
+    "Here is an example of a co-occurrence vector for the word \"dog\":\n",
+    "\n",
+    "```\n",
+    "dog | cat | ball | park | fetch\n",
+    "------- | -------- | -------- | -------- | --------\n",
+    "100      | 50        | 40        | 30        | 20\n",
+    "```\n",
+    "\n",
+    "This co-occurrence vector shows that the word \"dog\" appears together with the words \"cat\", \"ball\", \"park\", and \"fetch\" more often than it appears with other words. This suggests that these words are semantically similar to the word \"dog\".\n",
+    "\n",
+    "Co-occurrence vectors are a powerful tool for representing the relationships between words in a text corpus. They can be used for a variety of tasks, including word similarity, word clustering, and anomaly detection.\n",
+    "\n",
+    "Here are some additional benefits of using co-occurrence vectors:\n",
+    "\n",
+    "* They are relatively easy to construct.\n",
+    "* They can be used to represent the relationships between words in a variety of contexts.\n",
+    "* They can be used for a variety of tasks, including word similarity, word clustering, and anomaly detection.\n",
+    "\n",
+    "However, co-occurrence vectors also have some limitations:\n",
+    "\n",
+    "* They can be computationally expensive to construct for large text corpora.\n",
+    "* They can be sensitive to the context in which they are constructed.\n",
+    "* They may not be able to capture all of the semantic relationships between words.\n",
+    "\n",
+    "Overall, co-occurrence vectors are a valuable tool for representing the relationships between words in a text corpus. They can be used for a variety of tasks, but it is important to be aware of their limitations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['to', 'construct', 'a', 'co-occurrence', 'vector']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "import nltk\n",
+    "\n",
+    "def construct_cooccurrence_vector(text, window_size=5):\n",
+    "    \"\"\"Constructs a co-occurrence vector for the given text using NLTK.\n",
+    "\n",
+    "    Args:\n",
+    "        text: A string containing the text to construct the co-occurrence vector for.\n",
+    "        window_size: The size of the context window to use.\n",
+    "\n",
+    "    Returns:\n",
+    "        A dictionary mapping words to their co-occurrence vectors.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    cooccurrence_vector = defaultdict(list)\n",
+    "    tokens = nltk.word_tokenize(text)\n",
+    "\n",
+    "    for i in range(len(tokens)):\n",
+    "        # Get the current word and the context words.\n",
+    "        current_word = tokens[i]\n",
+    "        context_words = tokens[i - window_size: i] + tokens[i + 1: i + window_size + 1]\n",
+    "\n",
+    "        for context_word in context_words:\n",
+    "            # Increment the co-occurrence count for the current word and the context word.\n",
+    "            cooccurrence_vector[current_word].append(context_word)\n",
+    "\n",
+    "    return cooccurrence_vector\n",
+    "\n",
+    "# Example usage:\n",
+    "\n",
+    "text = \"This is a sentence to construct a co-occurrence vector for.\"\n",
+    "cooccurrence_vector = construct_cooccurrence_vector(text)\n",
+    "\n",
+    "# Print the co-occurrence vector for the word \"sentence\".\n",
+    "print(cooccurrence_vector[\"sentence\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(('e', 'n'), 3), (('i', 's'), 2), (('s', ' '), 2), ((' ', 'a'), 2), (('a', ' '), 2), (('n', 'c'), 2), (('c', 'e'), 2), (('e', ' '), 2), (('t', 'o'), 2), ((' ', 'c'), 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "\n",
+    "# Create a nltk.Text object from the text.\n",
+    "text = nltk.Text(\"This is a sentence to construct a co-occurrence vector for.\")\n",
+    "\n",
+    "# Create a nltk.collocations.BigramCollocationFinder object.\n",
+    "bigram_collocation_finder = nltk.collocations.BigramCollocationFinder.from_words(text.tokens)\n",
+    "\n",
+    "# Identify the bigrams that co-occur more frequently than expected by chance.\n",
+    "bigrams = bigram_collocation_finder.ngram_fd.most_common()\n",
+    "\n",
+    "# Print the top 10 bigrams.\n",
+    "print(bigrams[:10])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Thank You!**"
+   ]
   }
  ],
  "metadata": {
