--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -174,6 +174,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Implementation Of LSTM..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-21 00:04:29.102202: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-10-21 00:04:29.582999: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-10-21 00:04:29.592827: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-10-21 00:04:32.740212: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "391/391 [==============================] - 35s 81ms/step - loss: 0.4528 - accuracy: 0.7751 - val_loss: 0.3414 - val_accuracy: 0.8501\n",
+      "Epoch 2/5\n",
+      "391/391 [==============================] - 31s 80ms/step - loss: 0.2741 - accuracy: 0.8894 - val_loss: 0.3428 - val_accuracy: 0.8477\n",
+      "Epoch 3/5\n",
+      "391/391 [==============================] - 25s 63ms/step - loss: 0.2226 - accuracy: 0.9150 - val_loss: 0.3865 - val_accuracy: 0.8423\n",
+      "Epoch 4/5\n",
+      "391/391 [==============================] - 25s 65ms/step - loss: 0.1892 - accuracy: 0.9299 - val_loss: 0.4104 - val_accuracy: 0.8380\n",
+      "Epoch 5/5\n",
+      "391/391 [==============================] - 24s 62ms/step - loss: 0.1605 - accuracy: 0.9403 - val_loss: 0.4317 - val_accuracy: 0.8326\n",
+      "782/782 [==============================] - 11s 13ms/step\n",
+      "Accuracy: 83.26%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.datasets import imdb\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Load the IMDb dataset with a fixed vocabulary size (num_words).\n",
+    "(X_train, y_train), (X_test, y_test) = imdb.load_data(num_words=10000)\n",
+    "\n",
+    "# Pad sequences to ensure they have the same length.\n",
+    "X_train = pad_sequences(X_train, maxlen=100)\n",
+    "X_test = pad_sequences(X_test, maxlen=100)\n",
+    "\n",
+    "# Create an LSTM model.\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Embedding(10000, 16, input_length=100),\n",
+    "    tf.keras.layers.LSTM(32),\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "# Compile the model.\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model.\n",
+    "model.fit(X_train, y_train, epochs=5, batch_size=64, validation_data=(X_test, y_test))\n",
+    "\n",
+    "# Evaluate the model.\n",
+    "y_pred = model.predict(X_test)\n",
+    "y_pred_binary = (y_pred > 0.5).astype(int)\n",
+    "accuracy = accuracy_score(y_test, y_pred_binary)\n",
+    "print(f'Accuracy: {accuracy * 100:.2f}%')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Bi-Directional LSTM\n",
     "\n",
     "A Bidirectional Long Short-Term Memory (BiLSTM) is an extension of the Long Short-Term Memory (LSTM) architecture that is designed to capture information from both past and future context in a sequence. It is particularly useful for tasks where understanding the context in both directions is important, such as natural language processing (NLP), speech recognition, and various sequential data analysis tasks.\n",
@@ -230,6 +305,70 @@
     "img3=Image.open('Data/Images/BILSTM.png')\n",
     "img3=img3.convert(\"RGB\")\n",
     "display(img3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iplementation Of BiLSTM...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "391/391 [==============================] - 43s 94ms/step - loss: 0.4488 - accuracy: 0.7760 - val_loss: 0.3386 - val_accuracy: 0.8508\n",
+      "Epoch 2/5\n",
+      "391/391 [==============================] - 36s 92ms/step - loss: 0.2692 - accuracy: 0.8917 - val_loss: 0.3574 - val_accuracy: 0.8480\n",
+      "Epoch 3/5\n",
+      "391/391 [==============================] - 39s 99ms/step - loss: 0.2172 - accuracy: 0.9165 - val_loss: 0.3891 - val_accuracy: 0.8352\n",
+      "Epoch 4/5\n",
+      "391/391 [==============================] - 37s 94ms/step - loss: 0.1860 - accuracy: 0.9319 - val_loss: 0.4378 - val_accuracy: 0.8359\n",
+      "Epoch 5/5\n",
+      "391/391 [==============================] - 36s 92ms/step - loss: 0.1515 - accuracy: 0.9475 - val_loss: 0.4470 - val_accuracy: 0.8282\n",
+      "782/782 [==============================] - 14s 17ms/step\n",
+      "Accuracy: 82.82%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.datasets import imdb\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Load the IMDb dataset with a fixed vocabulary size (num_words).\n",
+    "(X_train, y_train), (X_test, y_test) = imdb.load_data(num_words=10000)\n",
+    "\n",
+    "# Pad sequences to ensure they have the same length.\n",
+    "X_train = pad_sequences(X_train, maxlen=100)\n",
+    "X_test = pad_sequences(X_test, maxlen=100)\n",
+    "\n",
+    "# Create a BiLSTM model.\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Embedding(10000, 16, input_length=100),\n",
+    "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "# Compile the model.\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model.\n",
+    "model.fit(X_train, y_train, epochs=5, batch_size=64, validation_data=(X_test, y_test))\n",
+    "\n",
+    "# Evaluate the model.\n",
+    "y_pred = model.predict(X_test)\n",
+    "y_pred_binary = (y_pred > 0.5).astype(int)\n",
+    "accuracy = accuracy_score(y_test, y_pred_binary)\n",
+    "print(f'Accuracy: {accuracy * 100:.2f}%')"
    ]
   },
   {
